# vertex

./: .gitignore  Concepts and Structures.md  README.md  Workflows.md  bun.lockb  nuxt.config.ts  package.json
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: CommandPaletteButton.vue  ContentEditor.vue  EditorHeaderBreadcrumbs.vue  FileTreeComponent.vue  MinimalLineToc.vue  ReferenceBacklinksListComponent.vue  ReferenceForelinksListComponent.vue  ReferenceLinksListComponent.vue  SidebarCollapserButton.vue  SinglespaceCommandPalette.vue  SpaceOnOs.vue  TableOfContentsPanelComponent.vue  TabsHeaderComponent.vue  TextPreviewEditField.vue  WorkspaceCommandPalette.vue  WritersInfoPanelComponent.vue
app/components/LayoutComponents/: DashboardCenterPanel.vue  DashboardLeftPanelSidebar.vue  DashboardRightPanelSidebar.vue
app/components/Modals/: DeleteFilesModal.vue  MoveFileModal.vue  NewFileModal.vue  PreviewMermaidGraphModal.vue  RenameFileModal.vue
app/components/Settings/: ScrollLayout.vue
app/components/Utility/: Collapsible.vue  ThemePicker.vue  ThemePickerButton.vue
app/components/ViewerEditor/: BasesViewer.vue  CUSTOM_FIELD_TYPES_GUIDE.md  CodeText.vue  ImageViewer.vue  LatexDoc.vue  LayoutWrapper.vue  RichText.vue  YamlDataForm.vue  YamlForm.vue
app/composables/active/: useActiveEditorContent.ts  useActiveLayouts.ts  useActiveSessions.ts  useActiveSinglespaceIndex.ts  useActiveSinglespaceTools.ts  useActiveTabs.ts  useActiveWindowSessions.ts  useActiveWorkflows.ts  useActiveWorkspace.ts  useActiveWorkspaceIndex.ts  useActiveWorkspaceTools.ts
app/composables/app/: SESSION_ACTIONS_ARCHITECTURE.md  useAppConfig.ts  useAppConfiguration.ts  useAppCrossWindowEvents.ts  useAppFileStartHandler.ts  useAppNavigator.ts  useAppOpener.ts  useAppRecents.ts  useAppSessionActions.ts  useAppSessionNavigator.ts  useAppSessionRecovery.ts  useAppSessions.ts  useAppSettings.ts  useAppTheme.ts  useAppWebviewWindows.ts  useAppWindowEventBus.ts  useAppWindowMenu.ts  useAppWindows.ts
app/layouts/: settings.vue  singlespace.vue  workspace.vue
app/pages/: index.vue  loading.vue
app/pages/settings/: index.vue  (+2 more)
app/plugins/: initialize.client.ts  latex2vue.client.ts
i18n/locales/: zh-CN.json
server/utils/: useServerEncryption.ts
shared/types/: types.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+46 files in other folders)
