[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["macos-private-api"] }
tauri-plugin-log = { version = "2.7.0", features = [] }
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-dialog = { version = "2.4.0", features = [] }
tauri-plugin-store = { version = "2.4.0", features = [] }
tauri-plugin-clipboard-manager = { version = "2.3.0", features = [] }
tauri-plugin-opener = { version = "2.2.3", features = [] }
