[package]
name = "Vertex"
version = "0.1.1-75018d98"
description = "A General Purpose Markdown Editor."
authors = ["Type-32"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = ["protocol-asset", "macos-private-api", "devtools"] }
tauri-plugin-log = { version = "2.8.0", features = [] }
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = { version = "2.4.5", features = ["watch"] }
tauri-plugin-dialog = { version = "2.6.0", features = [] }
tauri-plugin-store = { version = "2.4.2", features = [] }
tauri-plugin-clipboard-manager = { version = "2.3.2", features = [] }
tauri-plugin-opener = { version = "2.5.3", features = [] }
tauri-plugin-os = { version = "2.3.2", features = [] }
tauri-plugin-process = { version = "2.3.1", features = [] }
url = "2.5.8"
tauri-plugin-notification = { version = "2.3.3", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.3.7", features = [] }
